Bug 857336 - Always allow PresShell::GoToAnchor to scroll when called from nsDocShell::ScrollToAnchor.  r=roc